Fix T80895: Complex solidify compare edges by content

Even if the index of the edge is not equal the content can be equal
if it has been merged. So compare the content.

Ref D8931